--- a/src/components/Chart/DisplayComponent.css
+++ b/src/components/Chart/DisplayComponent.css
@@ -5,3 +5,32 @@
     margin: 15px;
     border-radius: 20px;
 }
+
+.tooltip__box {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border: 2px solid #000000;
+}
+
+.tooltip__box ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.tooltip-crop__img {
+    max-width: 30px;
+}
+
+.tooltip-gold__img {
+    vertical-align: middle;
+    margin-left: -2px;
+    margin-right: -2px;
+}
+
+.tooltip__title {
+    font-size: 1.2em;
+    padding-top: 5px;
+    font-weight: 500;
+}
