Calculations raw produce changed to account for fertilizer/quality of crop

--- a/src/components/Chart/OptionsComponent.css
+++ b/src/components/Chart/OptionsComponent.css
@@ -1,11 +1,13 @@
 .options__container {
-    max-width: 500px;
+    max-width: 750px;
     background-color: #333333;
     padding: 15px;
     margin: 15px auto;
     border-radius: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
 }
 
 .basic-info__container {
